--- a/AMSMS/AMSMS/AMSMS.vbproj
+++ b/AMSMS/AMSMS/AMSMS.vbproj
@@ -93,6 +93,24 @@
     <Compile Include="Admin\adminEdit.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="EmployeeLogin\empLoginAdd.Designer.vb">
+      <DependentUpon>empLoginAdd.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLogin\empLoginAdd.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmployeeLogin\empLogins.Designer.vb">
+      <DependentUpon>empLogins.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLogin\empLogins.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EmployeeLogin\empLoginUpdate.Designer.vb">
+      <DependentUpon>empLoginUpdate.vb</DependentUpon>
+    </Compile>
+    <Compile Include="EmployeeLogin\empLoginUpdate.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Employees\employeeAdd.Designer.vb">
       <DependentUpon>employeeAdd.vb</DependentUpon>
     </Compile>
@@ -103,6 +121,12 @@
       <DependentUpon>employees.vb</DependentUpon>
     </Compile>
     <Compile Include="Employees\employees.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Employees\employeeUpdate.Designer.vb">
+      <DependentUpon>employeeUpdate.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Employees\employeeUpdate.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Employees\loginForm.Designer.vb">
@@ -165,11 +189,23 @@
     <EmbeddedResource Include="Admin\adminEdit.resx">
       <DependentUpon>adminEdit.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeLogin\empLoginAdd.resx">
+      <DependentUpon>empLoginAdd.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeLogin\empLogins.resx">
+      <DependentUpon>empLogins.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmployeeLogin\empLoginUpdate.resx">
+      <DependentUpon>empLoginUpdate.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Employees\employeeAdd.resx">
       <DependentUpon>employeeAdd.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Employees\employees.resx">
       <DependentUpon>employees.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Employees\employeeUpdate.resx">
+      <DependentUpon>employeeUpdate.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Employees\loginForm.resx">
       <DependentUpon>loginForm.vb</DependentUpon>
