--- a/AMSMS/AMSMS/AMSMS.vbproj
+++ b/AMSMS/AMSMS/AMSMS.vbproj
@@ -160,6 +160,12 @@
     <Compile Include="Employees\loginForm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="GSM\setGSM.Designer.vb">
+      <DependentUpon>setGSM.vb</DependentUpon>
+    </Compile>
+    <Compile Include="GSM\setGSM.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="mainform.Designer.vb">
       <DependentUpon>mainform.vb</DependentUpon>
     </Compile>
@@ -273,6 +279,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Employees\loginForm.resx">
       <DependentUpon>loginForm.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GSM\setGSM.resx">
+      <DependentUpon>setGSM.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="mainform.resx">
       <DependentUpon>mainform.vb</DependentUpon>
